# mechinterp

./: .gitignore  ARCHITECT_REVIEW.md  CHECKPOINT_STATUS.md  CPU_TRAINING_STATUS.md  FINAL_ANALYSIS.md  FINDINGS.md  GROKKING_ANALYSIS.md  INITIALIZATION_DEPENDENCE.md  README.md  RERUN_RECOMMENDATION.md  RESEARCH_REPORT.md  activation_analysis.txt  analyze.py  config.py  config.yaml  grokking_in_transformer_old_reference.py  main.py  modal_test.py  model_setup.py  nanda_analysis.txt  programsynth-try.py  pyproject.toml  test_config.yaml  training.py
animations/: grokking.py
configs/: dense_grokking.toml  find_grokking_seed.toml  full_run.toml  full_run2.toml  grokking_100pct.toml  perfect_grokking_seed42.toml  seed43_cpu_wd3.toml  test_run.toml  ultra_dense_grokking.toml
docs/: GROKKING_DYNAMICS_REPORT.md  claude.md  marimo-gotchas.md
notebooks/: grokking_dynamics.py  grokking_explorer.py  grokking_movie.py  grokking_story.py
scripts/: analyze.py  analyze_grokking_gap.py  analyze_runs.py  circuit_diagrams.py  create_focused_diagrams.py  deep_fourier_analysis.py  download_3way_comparison.py  download_checkpoints.py  download_grokking_checkpoints.py  download_key_checkpoints.py  download_wandb_runs.py  extract_animation_data.py  inspect_activations.py  inspect_artifacts.py  inspect_checkpoint_geometry.py  inventory_checkpoints.py  literature_validation.py  nanda_analysis.py  run_train.py  train.py  train_remote.py  visualize_best_pair.py
src/: data.py  interp.py  model.py  probes.py  runner.py  sae.py  train.py  types.py  utils.py
(+1 files in other folders)
