[project]
name = "marim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo[recommended]>=0.15.2",
    "modal>=1.1.3",
    "torchinfo>=1.8.0",
    "torchviz>=0.0.3",
    "transformer-lens>=2.16.1",
    "umap-learn>=0.5.9.post2",
]
