[project]
name = "marim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "auto-mix-prep>=0.2.0",
    "environs>=14.3.0",
    "marimo[recommended]>=0.15.2",
    "matplotlib>=3.10.6",
    "mcp>=1",
    "modal>=1.1.3",
    "pandas-stubs==2.3.2.250827",
    "pydantic>=2",
    "pytest>=9.0.1",
    "tabulate>=0.9.0",
    "torchinfo>=1.8.0",
    "torchviz>=0.0.3",
    "trackio>=0.3.1",
    "transformer-lens>=2.16.1",
    "umap-learn>=0.5.9.post2",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
]

[tool.marimo.runtime]
pythonpath = ["."]
